tests/invalid/parameter_pack_method_not_supported.wio
object Foo {
    public fn Bar<Args...>(args: Args...) -> i32 {
        return 0;
    }
}
